--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.45.1
 Authlib==1.5.2
 
 llvmlite==0.44.0
@@ -14,19 +14,20 @@ xgboost==3.0.0
 imbalanced-learn==0.13.0
 protobuf==3.20.3
 tensorflow==2.19.0
+keras==3.9.2
 
-matplotlib
-plotly
-vl-convert-python
-kaleido
+matplotlib==3.10.1
+plotly==6.0.1
+vl-convert-python==1.7.0
+kaleido==0.2.1
 
 shap==0.47.2
 lime==0.2.0.1
 dice-ml==0.11
 
-supabase
-sqlalchemy
-psycopg2
+supabase==2.15.0
+sqlalchemy==2.0.40
+psycopg2==2.9.10
 
 pdfkit==1.0.0
-kaggle
+kaggle==1.7.4.2
